--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,13 @@ body, html {
 
 body {
   line-height: 1.5; /* This requires customizing the line height for larger text. */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: Arial, sans-serif;
+  transition: background-color 3s ease; /* Smooth transition */
 }
 
 img, picture, video, canvas, svg {
@@ -32,7 +39,7 @@ input, button, textarea, select {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
   font-family: system-ui;
-  padding-top: 1em;
+  /* padding-top: 1em; */
 } /* Consider applying this to ALL elements. Also, consider adding `hyphen: auto;`. */ 
 
 p {
