--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,11 @@ h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
 }
 
-.weather-container {
+.all-weather {
+  display: grid;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
