--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,7 @@ body {
   color: black;
   font-family: Arial, sans-serif;
   transition: background-color 3s ease; /* Smooth transition */
+  padding: 1rem;
 }
 
 img, picture, video, canvas, svg {
@@ -48,12 +49,22 @@ h1, h2, h3, h4, h5, h6 {
 
 .all-weather {
   display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: min(650px, 95%);
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0.5em;
+}
+
+.container.weather-container-now {
+  grid-row: 1 / -1;
+  font-size: 3.5em;
+  align-self: center;
 }
 
 .icon {
@@ -61,6 +72,36 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
+/* .container.weather-container-now .icon {
+  height: 9em;
+} */
+
 .icon > img {
   height: 100%;
+}
+
+.city-name {
+  font-size: 2.5em;
+  font-weight: bold;
+}
+
+form {
+  display: flex;
+  gap: 0.5em;
+}
+
+input {
+  border: none;
+  border-radius: 0.5em;
+  padding: 0 0.5em;
+}
+
+button {
+  border: none;
+  border-radius: 0.5em;
+  padding: 0 0.5em;
+}
+
+button:hover {
+  background-color: silver;
 }
