--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ input, button, textarea, select {
 
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
-  font-family: system-ui;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   /* padding-top: 1em; */
 } /* Consider applying this to ALL elements. Also, consider adding `hyphen: auto;`. */ 
 
@@ -80,9 +80,33 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
 }
 
+.temp.f::after {
+  content: "°F";
+}
+
+.temp.c::after {
+  content: "°C";
+}
+
 .city-name {
   font-size: 2.5em;
   font-weight: bold;
+  margin-top: auto;
+}
+
+.controls {
+  display: flex;
+  gap: 1rem;
+}
+
+div.temp-switch {
+  background-color: gray;
+  padding: 0.2rem;
+  border-radius: 0.5em;
+}
+
+div.temp-switch button.active {
+  background-color: #E9D78B;
 }
 
 form {
@@ -104,4 +128,17 @@ button {
 
 button:hover {
   background-color: silver;
+  cursor: pointer;
+}
+
+footer {
+  margin-top: auto;
+}
+
+a,
+a:active,
+a:hover
+a:visited {
+  color: black;
+  text-decoration: none;
 }
