--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,8 @@ body {
   align-items: center;
   color: black;
   font-family: Arial, sans-serif;
-  transition: background-color 3s ease; /* Smooth transition */
+  transition: background-image 3s ease;
+  background-size: cover;
   padding: 1rem;
 }
 
